<?xml version="1.0" encoding="UTF-8"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <parent>
      <groupId>org.jboss</groupId>
      <artifactId>jboss-parent</artifactId>
      <version>14</version>
   </parent>
   <groupId>org.jboss.forge.addon</groupId>
   <artifactId>angularjs-tests</artifactId>
   <version>2.0.0-SNAPSHOT</version>
   <properties>
      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
      <maven.compiler.source>1.7</maven.compiler.source>
      <maven.compiler.target>1.7</maven.compiler.target>
      <maven.test.redirectTestOutputToFile>true</maven.test.redirectTestOutputToFile>

      <version.forge.descriptors>0.0.4.Final</version.forge.descriptors>
      <version.furnace>2.4.1.Final</version.furnace>
   </properties>
   <dependencyManagement>
      <dependencies>
         <dependency>
            <groupId>org.jboss.forge</groupId>
            <artifactId>forge-bom</artifactId>
            <version>${version.furnace}</version>
            <type>pom</type>
            <scope>import</scope>
         </dependency>
      </dependencies>
   </dependencyManagement>
   <dependencies>
      <dependency>
         <groupId>org.jboss.forge.addon</groupId>
         <artifactId>angularjs</artifactId>
         <classifier>forge-addon</classifier>
         <version>2.0.0-SNAPSHOT</version>
         <scope>provided</scope>
      </dependency>
      <dependency>
         <groupId>org.jboss.forge.addon</groupId>
         <artifactId>maven</artifactId>
         <classifier>forge-addon</classifier>
         <scope>test</scope>
      </dependency>
      <dependency>
         <groupId>org.jboss.forge.addon</groupId>
         <artifactId>projects</artifactId>
         <classifier>forge-addon</classifier>
         <scope>test</scope>
      </dependency>
      <dependency>
         <groupId>org.jboss.forge.addon</groupId>
         <artifactId>javaee</artifactId>
         <classifier>forge-addon</classifier>
         <scope>test</scope>
      </dependency>

      <dependency>
         <groupId>org.jboss.forge.addon</groupId>
         <artifactId>ui-test-harness</artifactId>
         <classifier>forge-addon</classifier>
         <scope>test</scope>
      </dependency>
      <dependency>
         <groupId>org.jboss.forge.addon</groupId>
         <artifactId>scaffold</artifactId>
         <classifier>forge-addon</classifier>
         <scope>test</scope>
      </dependency>
      <dependency>
         <groupId>org.jboss.forge.furnace.container</groupId>
         <artifactId>cdi</artifactId>
         <classifier>forge-addon</classifier>
         <scope>test</scope>
      </dependency>
      <dependency>
         <groupId>org.jboss.forge.furnace.test</groupId>
         <artifactId>furnace-test-harness</artifactId>
         <scope>test</scope>
      </dependency>
      <dependency>
         <groupId>org.jboss.forge.furnace.test</groupId>
         <artifactId>arquillian-furnace-classpath</artifactId>
         <scope>test</scope>
      </dependency>
   </dependencies>
   <build>
      <plugins>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <configuration>
               <argLine>-Xms256m -Xmx512m -XX:MaxPermSize=160m</argLine>
            </configuration>
         </plugin>
      </plugins>
   </build>
</project>
